--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,16 +1,33 @@
 nav {
+    width: 100%;
     height: 68px;
-    background-color: #2b88c8;
+    background-color: #5982ff;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+}
+
+.nav-logo {
+    display: flex;
     align-items: center;
 }
-nav h1 {
+
+.nav-logo > h1 {
     color : #ffffff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
     line-height: 68px;
     letter-spacing: 4px;
+}
+
+.nav-logo > img {
+    display: inline-block;
+    position: relative;
+    right: 10px;
+    max-width: 40px;
+    max-height: 40px;
 }
 
 .active-nav-link {
