--- a/src/components/Pokecard/Pokecard.css
+++ b/src/components/Pokecard/Pokecard.css
@@ -15,6 +15,7 @@
     border-radius: 15px;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+    cursor: pointer;
 }
 
 .upper-card {
