--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,10 +1,9 @@
 nav {
     width: 100%;
     height: 68px;
-    background-color: #5982ff;
+    /* background-color: #5982ff; */
     display: flex;
     justify-content: space-around;
-    align-items: center;
     position: fixed;
     z-index: 1;
 }
@@ -42,4 +41,67 @@ nav {
     text-decoration: inherit;
     margin-right: 22px;
     font-size: 18px;
+}
+
+.nav-links {
+    display : flex;
+    align-items: center;
+}
+
+.nav-links > a:hover {
+    color : #ffffff;
+}
+
+.responsive-menu {
+    max-width: 40px;
+    max-height: 40px;
+    display: none;
+    margin: auto;
+}
+
+@media screen and (max-width: 1000px) {
+    .nav-logo {
+        margin-left: 10px;
+    }
+    
+    .nav-logo > img {  
+        right: 6px;
+        max-width: 22px;
+        max-height: 22px;
+    }
+    .nav-logo > h1 {
+        letter-spacing: 0px;
+        font-size: 16px;
+    }
+    .nav-links {
+        flex-direction: column;
+        row-gap: 10px;
+        background-color: rgba(0, 0, 0, 0.6);
+        backdrop-filter: blur(1rem);
+        width: 200px;
+        height: 250px;
+        justify-content: center;
+        font-weight: 700;
+        transform: translateX(100%);
+        transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+    }
+
+    .nav-links[data-hidden="true"] {
+        transform: translateX(0%);
+    }    
+
+    .nav-links > a {
+        margin: 0;
+    }
+
+    .responsive-menu {
+        display: inline-block;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        z-index: 9999;
+    }
+    nav {
+        justify-content: space-between;
+    }
 }
