--- a/src/components/Pokecard/Pokecard.css
+++ b/src/components/Pokecard/Pokecard.css
@@ -82,6 +82,55 @@
     transform: scale(1.1);
 }
 
+@media screen and (max-width: 768px) {
+    .poke-card {
+        width: 128px;
+    }
+
+    .upper-card > .img-wrapper {
+        width: 78px;
+        height: 78px;
+    }
+    
+    .img-wrapper > img {
+        max-width: 50px;
+        max-height: 50px;
+    }
+
+    .mid-card {
+       padding-top: 0; 
+    }
+
+    .mid-card h3 {
+        font-size: 13px;
+    }
+
+    .lower-card {
+        padding: 2px;
+    }
+
+    .lower-card h3 {
+        font-size: 13px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .type-color-fire {
     color : red
 }
