--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1f2842;
+  overflow-x: hidden;
 }
 
 code {
