--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700;800&display=swap');
 
 .aside-conteiner {
-    height: 100%;
     position: fixed;
-    top: 0;
+    top: 10%;
+    bottom: 10%;
     left: 0;
     width: 50px;
     background-color: #fbe5f6;
     overflow-x: hidden;
-    margin-top: 68px;
     transition: all 0.3s;
 }
 
@@ -21,13 +20,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
 }
 
-.aside-list > a {
-    margin-top: 100px;
+.aside-list > a { 
     text-decoration: inherit;
     font-family: Raleway;
-    font-weight: 400;
+    font-weight: 700;
     color :black;
     width: 100%;
     padding: 20px 0px;
