--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 nav {
     width: 100%;
     height: 68px;
-    /* background-color: #5982ff; */
+    background-color: #1f2842;
     display: flex;
     justify-content: space-around;
     position: fixed;
@@ -11,6 +11,7 @@ nav {
 .nav-logo {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .nav-logo > h1 {
