--- a/src/components/PokemonDetail/PokemonDetail.css
+++ b/src/components/PokemonDetail/PokemonDetail.css
@@ -115,6 +115,50 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.btn-arrow-back {
+    position: relative;
+    top: 8rem;
+    left: 8rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.btn-arrow-back > img {
+    width: 36px
+}
+
+.btn-arrow-back > span {
+    color : white;
+    font-size: 32px;
+}
+
+@media (max-width: 992px) { 
+    .poke-conteiner {
+        width: 70%;
+        flex-direction: column;
+    }
+
+    .left-conteiner {
+        padding: 18px 4rem;
+    }
+
+    .types-conteiner {
+        justify-content: flex-start;
+        gap: 12px;
+    }
+
+    .img-conteiner {
+        margin: auto;
+    }
+}
+
+
+
+
+
+
+
 
 
 
