add responsive sidebar for mobile

--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -38,3 +38,50 @@
     background-color: #1f2842;
     color: #ffffff;
 }
+
+.responsive-filter-menu {
+    display: none;
+    z-index: 999;
+}
+
+@media (max-width: 768px) {
+    .aside-conteiner {
+        transform: translate(-100%);
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .aside-list {
+        height: 70%;
+    }
+
+    .responsive-filter-menu {
+        display: inline-block;
+        position: relative;
+        top: 4rem;
+        left: 1rem;
+    }
+
+    .aside-conteiner[data-occult="true"] {
+        transform: translateX(0%);
+        width: 95%;
+        z-index: 99;
+    }
+
+    .aside-conteiner[data-occult="true"] + .responsive-filter-menu   {
+        position: fixed;
+        margin-top: 50px;
+    }
+
+    .aside-conteiner > h3 {
+        position: relative;
+        top: 26px;
+        left: 56px;
+    }
+
+    .aside-list > a {
+        width: auto;
+    } 
+}
