--- a/src/components/PokemonDetail/PokemonDetail.css
+++ b/src/components/PokemonDetail/PokemonDetail.css
@@ -128,12 +128,7 @@
     width: 36px
 }
 
-.btn-arrow-back > span {
-    color : white;
-    font-size: 32px;
-}
-
-@media (max-width: 992px) { 
+@media screen and (max-width: 992px) { 
     .poke-conteiner {
         width: 70%;
         flex-direction: column;
@@ -150,6 +145,28 @@
 
     .img-conteiner {
         margin: auto;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .poke-conteiner {
+        top: 7em;
+    }
+    .left-conteiner {
+        padding: 18px 1rem;
+    }
+    .img-conteiner > img {
+        max-width: 12em;
+        max-height: 12em;
+    }
+
+    .btn-arrow-back {
+        top: 6rem;
+        left: 4rem;
+    }
+
+    .btn-arrow-back > img {
+        width: 22px
     }
 }
 
