--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -45,7 +45,8 @@
     z-index: 99;
 }
 
-@media (max-width: 768px) {
+/* Tablets and below */
+@media screen and (max-width: 992px) {
     .aside-conteiner {
         transform: translate(-100%);
         height: 50%;
