improving the pokemon card

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,3 +17,9 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .conteiner {
+        width: 100%;
+    }
+}
