--- a/src/components/PokemonDetail/PokemonDetail.css
+++ b/src/components/PokemonDetail/PokemonDetail.css
@@ -115,10 +115,31 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.moves-conteiner {
+.moves-conteiner > .moves {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+}
+
+.moves-conteiner > h2 {
+    color : #273b45;
+    font-size: 26px;
+    margin-bottom: 8px;
+}
+
+.moves-conteiner > .moves > a {
+    border: 2px solid #64656b;
+    border-radius: 10px;
+    padding: 3px;
+    text-transform: capitalize;
+    text-decoration: none;
+    color : #000000;
+    font-size: 14px;
+}
+
+.moves-conteiner > .moves > a:hover {
+    background-color: #64656b;
+    color: #ffffff
 }
 
 .btn-arrow-back {
@@ -180,7 +201,11 @@
     }
 }
 
-
+@media screen and (max-width: 280px) {
+    .img-conteiner > img {
+        max-width: 9em;
+    }
+}
 
 .bg-type-color-fire {
     background-color : red
