--- a/src/components/PokemonDetail/PokemonDetail.css
+++ b/src/components/PokemonDetail/PokemonDetail.css
@@ -50,6 +50,39 @@
     text-align: center;
 }
 
+.catch-button {
+    display: flex;
+    justify-content: center;
+}
+
+.catch-button > button {
+    margin-top: 3rem;
+    width: 86px;
+    height: 86px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 3px solid #000000;
+    box-shadow: 0 0 0 3px #ffffff,
+                0 0 0 6px #000000;
+    
+    background-color: #ff565b;
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.catch-button > button:hover {
+    background-color: #c82938;
+    animation:spin 1.5s linear infinite;
+}
+    
+@keyframes spin { 
+    100% { 
+        transform:rotate(360deg); 
+    } 
+}
+
 .right-conteiner {
     background-color: #f3eae8;
     flex-grow: 1;
