--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -14,18 +14,25 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.modal > h1 {
-    margin-top: 20px;
-    text-align: center;
+.modal[open] {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
 }
 
-.modal > button {
+.modal > h1 {
+    margin-top: 20px;
+}
+
+.modal > img {
+    margin-top: 20px;
+    max-width: 42px;
+    max-height: 42px;
     position: relative;
-    top: 50px;
-    width: 88px;
-    height: 38px;
-    background-color: #323c4b;
-    color: white;
+    animation-name: pokeball;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 .modal::backdrop {
@@ -40,4 +47,25 @@
 	to {
 		opacity:1;
 	}
+}
+
+@keyframes pokeball {
+    from {bottom : 0px}
+    to {bottom: 26px;}
+}
+
+/* @keyframes pokeball {
+    from {left: 0px;}
+    to {left: 8px;}
+} */
+
+/* @keyframes pokeball {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+} */
+
+@media screen and (max-width: 767px) {
+    .modal {
+        width: 95%;
+    }
 }
