--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -15,6 +15,7 @@
 }
 
 .modal[open] {
+    position: fixed;
     display: flex;
     justify-content: center;
     gap: 12px;
@@ -53,16 +54,6 @@
     from {bottom : 0px}
     to {bottom: 26px;}
 }
-
-/* @keyframes pokeball {
-    from {left: 0px;}
-    to {left: 8px;}
-} */
-
-/* @keyframes pokeball {
-    from {transform: rotate(0deg);}
-    to {transform: rotate(360deg);}
-} */
 
 @media screen and (max-width: 767px) {
     .modal {
